--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,6 +174,7 @@ button:focus{
 }
 .maincontent {
     max-width: 40%;
+    min-height: 100vh;
     width: 100%;
     margin: 0 auto;
     padding-top: 100px;
