integration with new implementation of node

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -273,6 +273,7 @@ img.darkmode{
 	width: 100%;
 	margin: 50px auto;
 	text-align: center;
+  padding-bottom: 100px;
 }
 .fixebtn .uniqbtn{
 	background: rgb(188,81,154);
